--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ code {
     monospace;
 }
 
+.scrollToBotom {
+  height: 450px;
+  background-color: #222222;
+}
+
 .gradient-border {
   position: relative;
   display: flex;
